zero-schema-macros/tests/ui/fail/14_unsupported_array_element.rs
use zero_schema_macros::zero;

#[zero]
struct UnsupportedArray<'a> {
    values: [&'a str; 2],
}

fn main() {}
